--- a/doer-disconf/doer-disconf-web/.settings/org.eclipse.wst.common.component
+++ b/doer-disconf/doer-disconf-web/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,10 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/profile/rd"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+        <dependent-module archiveName="doer-disconf-core-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/doer-disconf-core/doer-disconf-core">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="doer-disconf-web"/>
         <property name="java-output-path" value="/doer-disconf-web/target/classes"/>
     </wb-module>
